--- a/3-volumes/pages/exists.html
+++ b/3-volumes/pages/exists.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>This title exists already!</title>
+    <title>Ovaj naslov već postoji!</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
-      <h1><a href="/">MySite</a></h1>
+      <h1><a href="/">Moje sanduče</a></h1>
     </header>
     <main>
       <section>
-        <h2>This title exists already!</h2>
-        <p>Please pick a different one.</p>
-        <p><a href="/">Start again</a></p>
+        <h2>Ovaj naslov već postoji!</h2>
+        <p>Izaberite drugi naslov</p>
+        <p><a href="/">Probaj opet</a></p>
       </section>
     </main>
   </body>
