--- a/3-volumes/pages/message.html
+++ b/3-volumes/pages/message.html
@@ -12,7 +12,7 @@
     </header>
     <main>
       <section>
-        <h2>Kreirajte svoj Email</h2>
+        <h2>Ovde kreirajte svoj Email!</h2>
         <form action="/create" method="POST">
           <div class="form-control">
             <label for="title">Naslov</label>
